fixed error page flickers

--- a/src/components/menu/Avatar.css
+++ b/src/components/menu/Avatar.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     max-width: 50em;
+    margin: 0 auto;
 }
 
 .avatar__avatar__wrapper {
